# MediCompass

./: README.md
Backend/: Dockerfile  kubectl  main.py  pyproject.toml
Backend/llm/: models  store.py
Backend/models/: MediCompass_management.py
Backend/models/base/: llm.py
Backend/prompts/: Base.txt  MediCompass.txt  MediCompass_diagnosis.txt  MediCompass_management.txt  acrostic_generator.txt  anime_characterize.txt  anime_characterize_image.txt  interview_simulator.txt  kospi_analyzer.txt  patient.txt
Backend/routers/: __init__.py
Backend/routers/functions/: MediCompass.py  MediCompass_diagnosis.py  MediCompass_management.py  __init__.py  acrostic_generator.py  anime_characterize.py  (+2 more)
Chart/: Chart.yaml  values.yaml
Chart/templates/: backend.yaml  database.yaml  frontend.yaml  nginx.yaml
Frontend/: .dockerignore  0_Home.py  Dockerfile  README.md  pyproject.toml
Frontend/functions/: MediCompass_diagnosis.py  MediCompass_management.py  acrostic_generator.py  anime_characterize.py  identity.py  interview_simulator.py  kospi_analyzer.py
Frontend/locales/en-US/: MediCompass_diagnosis.yaml  MediCompass_management.yaml  acrostic_generator.yaml  anime_characterize.yaml  common.yaml  identity.yaml  interview_simulator.yaml  kospi_analyzer.yaml
Frontend/pages/: __init__.py  acrostic_generator.py
Frontend/utils/: client.py  init.py  locales.py  page.py  settings.py
Models/: MediCompass.py  MediCompass_diagnosis.py  MediCompass_management.py  acrostic_generator.py  anime_characterize.py  interview_simulator.py  kospi_analyzer.py
k8s/: backend.yaml
